# clinic-rag

./: README.md  gui.py  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
rag/: rag_utils.py
utils/: api_utils.py  data_utils.py
