[project]
name = "clinic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.4",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "openai>=2.7.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
]
